Road clipping safari fix

--- a/src/firstYearGuide/mobile/assets/css/careersFYG.css
+++ b/src/firstYearGuide/mobile/assets/css/careersFYG.css
@@ -3,11 +3,12 @@
     top: 0;
     left: 0;
 
-    width: 100%;
+    width: 100vw;
     height: 100vh;
 }
 
 .imgWrapper {
+    position: absolute;
     display: flex;
     align-items: flex-end;
     justify-content: center;
