--- a/src/firstYearGuide/mobile/assets/css/socialFYG.css
+++ b/src/firstYearGuide/mobile/assets/css/socialFYG.css
@@ -10,6 +10,7 @@
 
 
 .imgWrapper {
+    position: absolute;
     display: flex;
     align-items: flex-end;
     justify-content: center;
